refactor: v2.0.0 release preparation

--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -1,7 +1,7 @@
 {
   "app": {
     "title": "Welcome to Linux",
-    "version": "v1.0.0 (Beta)"
+    "version": "v2.0.0"
   },
   "sidebar": {
     "welcome": "Welcome",
