--- a/assets/locales/tr_TR.json
+++ b/assets/locales/tr_TR.json
@@ -1,7 +1,7 @@
 {
   "app": {
     "title": "Linux'a Hoş Geldiniz",
-    "version": "v1.0.0 (Beta)"
+    "version": "v2.0.0"
   },
   "sidebar": {
     "welcome": "Hoş Geldiniz",
