--- a/docs/ro-start.1
+++ b/docs/ro-start.1
@@ -1,4 +1,4 @@
-.TH RO-START "1" "January 2026" "ro-start 1.0.0" "User Commands"
+.TH RO-START "1" "February 2026" "ro-start 2.0.0" "User Commands"
 .SH NAME
 ro-start \- Fast, safe, and beautiful Linux welcome application
 .SH SYNOPSIS
@@ -76,11 +76,11 @@ System update tools:
 GTK documentation:
 .BR gtk4 (7)
 .SH BUGS
-Report bugs at: https://github.com/ro-repo/ro-start/issues
+Report bugs at: https://github.com/Acik-Kaynak-Gelistirme-Toplulugu/ro-start/issues
 .SH AUTHOR
-Written by ro-repo <project.roasd@gmail.com>
+Written by Açık Kaynak Geliştirme Topluluğu <info@osdev.shop>
 .SH COPYRIGHT
-Copyright © 2026 ro-repo.
+Copyright © 2026 Açık Kaynak Geliştirme Topluluğu.
 License GPLv3+: GNU GPL version 3 or later <https://gnu.org/licenses/gpl.html>.
 .br
 This is free software: you are free to change and redistribute it.
